tools/flowc/tests/errors/error23.flow
import tools/flowc/tests/errors/error23a;
forbid tools/flowc/tests/errors/error23b;

main() {

}
